# src/schemas/subscriptions_schemas.py
@@ -1,6 +1,6 @@
 from pydantic import BaseModel
 from uuid import UUID
-from datetime import datetime, date
+from datetime import datetime, date, timedelta
 from enum import Enum
 from typing import Optional
 
@@ -10,19 +10,28 @@ class PlanTypeEnum(str, Enum):
     subscription = "subscription"
     enterprise = "enterprise"
 
+class BillingCycleEnum(str, Enum):
+    monthly = "monthly"
+    yearly = "yearly"
+
 class SubscriptionBase(BaseModel):
     plan_type: PlanTypeEnum
-    start_date: date
-    end_date: date
+    billing_cycle: BillingCycleEnum
+
+    max_session_duration:int
+    persona_limit: int
+    is_custom: bool = False
 
 class SubscriptionCreate(SubscriptionBase):
     pass
 
 class SubscriptionUpdate(BaseModel):
     plan_type: Optional[PlanTypeEnum] = None
-    start_date: Optional[date] = None
-    end_date: Optional[date] = None
+    billing_cycle: Optional[BillingCycleEnum] = None
     status_active: Optional[bool] = None
+    max_session_duration:int
+    persona_limit: Optional[int] = None
+    is_custom: Optional[bool] = None
 
 class SubscriptionResponse(SubscriptionBase):
     subscription_id: str
